# CountingPolyominoes

./: .gitignore  CMakeLists.txt  GillsRedel.c  backups.cpp  backups.h  compile.bat  compilinux  defs.h  graphCreator  graphCreator.cpp  graphCreator.h  main.c  main.cpp  pybind11_wrapper.py.cpp  redel.c  redelClient.cpp  redelClient.h  redelServer  redelServer.cpp  redelServer.h  run.bat  runServerAndTwoClientsWSL.bat  test
Graphs/: Polyominoes4.txt  Polyominoes5.txt
client/: client.py  defs.py  redelClient.py
docs/: Project description document.docx  project_times.xlsx  זמני השקעה בפרויקט גיאומטריה חישובית.docx  מסמך תיאור פרויקט.docx
redel_core/: backups.cpp  backups.h  compile-client-core  compile-server-core  graphCreator.cpp  redelClient.cpp  redelClient.h  redelServer.cpp  redelServer.h  test.cpp
server/: databaseManager.py  defs.py  jobManager.py  redelServer.py  server.py
testing/: client_test.py  res.txt
testing/Graphs/: P30  Polyominoes3.txt
testing/Jobs/poly19/: poly19_0  poly19_1  poly19_10  poly19_11  poly19_12  poly19_13  poly19_14  poly19_15  poly19_16  poly19_17  poly19_18  poly19_2  poly19_3  poly19_4  poly19_5  poly19_6  poly19_7  poly19_8  poly19_9
testing/Jobs/poly20/: poly20_0  poly20_1  poly20_10  poly20_11  poly20_12  poly20_13  poly20_14  poly20_15  poly20_16  poly20_17  poly20_18  poly20_2  poly20_3  poly20_4  poly20_5  poly20_6  poly20_7  poly20_8  poly20_9
testing/Jobs/poly21/: poly21_0  poly21_1  poly21_10  poly21_11  poly21_12  poly21_13  poly21_14  poly21_15  poly21_16  poly21_17  poly21_18  poly21_2  poly21_3  poly21_4  (+5 more)
